Fix typo: lower case consistency for kb states

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -541,7 +541,7 @@
 	"stash.side.working": "Processos",
 	"stash.state": "Estat",
 	"stash.state.private": "Estat: privat",
-	"stash.state.published": "Estat: Públic",
+	"stash.state.published": "Estat: públic",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
 	"stash.upload_data": "Pujar dades",
