--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -541,7 +541,7 @@
 	"stash.side.working": "Procesos",
 	"stash.state": "Estado",
 	"stash.state.private": "Estado: privado",
-	"stash.state.published": "Estado: Público",
+	"stash.state.published": "Estado: público",
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
 	"stash.upload_data": "Subir datos",
