Cleanup translations + fix select on kb creation modal

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -38,7 +38,6 @@
 	"account.knowledgeboxes": "Caixes de coneixement",
 	"account.licence": "Llicència",
 	"account.logo": "Imatge de la caixa",
-	"account.logo_description": "Selecciona i puja una imatge",
 	"account.logotip": "Logotip",
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
@@ -147,7 +146,6 @@
 	"generic.back_to_home": "Tornar a la Home",
 	"generic.by_relevance": "per rellevància",
 	"generic.cancel": "Cancel·lar",
-	"generic.change_file": "Puja la imatge",
 	"generic.clean": "Netejar",
 	"generic.clear_all": "Esborrar tot",
 	"generic.close": "Tancar",
@@ -224,6 +222,7 @@
 	"generic.title": "Títol",
 	"generic.uid": "UID",
 	"generic.unlink": "Desenllaçar",
+	"generic.upload": "Pujar",
 	"generic.user": "Usuari",
 	"generic.user_preferences": "Preferències d’Usuari",
 	"generic.users": "Usuaris",
@@ -254,6 +253,7 @@
 	"language.ru": "Rus",
 	"language.sv": "Suec",
 	"language.tr": "Turc",
+	"link.create.error": "Error en carregar l'enllaç",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
 	"login.check_email": "Comprova el teu correu!",
 	"login.company": "Empresa",
@@ -399,7 +399,6 @@
 	"resource.non_editable_data": "Dades no editables",
 	"resource.ocr.title": "OCR",
 	"resource.other_data": "Altres dades del recurs",
-	"resource.page.upload_image": "Puja una imatge descriptiva del recurs",
 	"resource.paragraph.help": "Cerca",
 	"resource.paragraph.search": "Cerca per paràgraf",
 	"resource.password": "Contrasenya",
@@ -466,6 +465,7 @@
 	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la caixa de coneixement. Torneu-ho a intenta, sius plau",
 	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
 	"stash.create.in_progress": "Creació de la caixa de coneixement en curs...",
+	"stash.create.languages-help": "Seleccioneu si la informació que penjareu a la KB està en un o més idiomes. Si només hi ha un idioma, seleccioneu-lo per a una major precisió.",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
 	"stash.create_service_access": "Crea un nou Service Access",
 	"stash.delete.delete": "Eliminar caixa de coneixement?",
@@ -598,7 +598,9 @@
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
+	"upload.size_warning_2": "Els fitxers que superin aquesta mida no es penjaran",
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
+	"upload.uploading_files": "<strong>Càrrega de fitxers.</strong> Mentrestant, no dubteu a utilitzar Nuclia",
 	"upload.uploading_queue": "Cua de pujades",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
