--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -38,7 +38,6 @@
 	"account.knowledgeboxes": "Cajas de conocimiento",
 	"account.licence": "Licencia",
 	"account.logo": "Imagen de la caja",
-	"account.logo_description": "Selecciona y sube una imagen",
 	"account.logotip": "Logotipo",
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
@@ -147,7 +146,6 @@
 	"generic.back_to_home": "Volver a la Home",
 	"generic.by_relevance": "por relevancia",
 	"generic.cancel": "Cancelar",
-	"generic.change_file": "Sube la imagen",
 	"generic.clean": "Limpiar",
 	"generic.clear_all": "Borrar todo",
 	"generic.close": "Cerrar",
@@ -224,6 +222,7 @@
 	"generic.title": "Título",
 	"generic.uid": "UID",
 	"generic.unlink": "Desenlazar",
+	"generic.upload": "Subir",
 	"generic.user": "Usuario",
 	"generic.user_preferences": "Preferencias de Usuario",
 	"generic.users": "Usuarios",
@@ -254,6 +253,7 @@
 	"language.ru": "Ruso",
 	"language.sv": "Sueco",
 	"language.tr": "Turco",
+	"link.create.error": "Error al subir el enlace",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.check_email": "!Revisa tu correo!",
 	"login.company": "Empresa",
@@ -399,7 +399,6 @@
 	"resource.non_editable_data": "Datos no editables",
 	"resource.ocr.title": "OCR",
 	"resource.other_data": "Otros datos del recurso",
-	"resource.page.upload_image": "Sube una imagen descriptiva del recurso",
 	"resource.paragraph.help": "Busca",
 	"resource.paragraph.search": "Busca en párrafo",
 	"resource.password": "Contraseña",
@@ -466,6 +465,7 @@
 	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la caja de conocimiento. Por favor vuelve a intentarlo.",
 	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
 	"stash.create.in_progress": "Creación de la caja de conocimiento en curso...",
+	"stash.create.languages-help": "Seleccione si la información que cargará en la KB está en uno o más idiomas. Si solo hay un idioma, selecciónelo para una mayor precisión.",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta caja de conocimiento. De forma predeterminada aparece la zona escogida en el Account",
 	"stash.create_service_access": "Crea un nuevo Service Access",
 	"stash.delete.delete": "¿Eliminar caja de conocimiento?",
@@ -598,7 +598,9 @@
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
+	"upload.size_warning_2": "Los archivos que excedan este tamaño no se cargarán",
 	"upload.takes_time": "Nuclia necesita un rato para procesar los archivos.",
+	"upload.uploading_files": "<strong>Subiendo archivos.</strong> Siéntase libre de usar Nuclia mientras tanto",
 	"upload.uploading_queue": "Cola de subidas",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
