--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -45,7 +45,6 @@
 	"account.knowledgeboxes": "Knowledge boxes",
 	"account.licence": "License",
 	"account.logo": "Box image",
-	"account.logo_description": "Select and upload an image",
 	"account.logotip": "Logo",
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
@@ -184,7 +183,6 @@
 	"generic.back_to_home": "Back to Home Page",
 	"generic.by_relevance": "by relevance ",
 	"generic.cancel": "Cancel",
-	"generic.change_file": "Upload image",
 	"generic.clean": "Clean",
 	"generic.clear_all": "Clear All",
 	"generic.close": "Close",
@@ -265,6 +263,7 @@
 	"generic.title": "Title",
 	"generic.uid": "UID",
 	"generic.unlink": "Unlink",
+	"generic.upload": "Upload",
 	"generic.user": "User",
 	"generic.user_preferences": "User preferences",
 	"generic.users": "Users",
@@ -295,7 +294,7 @@
 	"language.ru": "Russian",
 	"language.sv": "Swedish",
 	"language.tr": "Turkish",
-	"link.create.error": "Error when creating uploading the link",
+	"link.create.error": "Error when uploading the link",
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
 	"login.agree": "I agree to Nuclia’s",
 	"login.check_email": "Check your email!",
@@ -387,17 +386,6 @@
 	"quickstart.go": "Go",
 	"quickstart.pending_tasks": "Pending tasks",
 	"quickstart.remaining_tasks": "{{num}} Remaining tasks",
-	"quickstart.task1.title": "Sign Up",
-	"quickstart.task2.title": "First PDF Upload",
-	"quickstart.task3.title": "Watch tutorial video",
-	"quickstart.task4.description": "Use the “Content Options” in the menu to upload:<br>• 1 document (Word or PDF)<br>• 1 media file (audio or video) in English, Spanish, French, German, Catalan or Italian<br>• 1 link",
-	"quickstart.task4.title": "Upload 3 files (1 minute) ",
-	"quickstart.task5.description": "Check the processing status of your files.<br>Once your files are processed, use the search bar to find results.",
-	"quickstart.task5.title": "Make 3 searches (2 minutes)",
-	"quickstart.task6.description": "Use your API Key to make 3 queries to the API.",
-	"quickstart.task6.title": "Make 3 API Calls (2 minutes)",
-	"quickstart.task7.description": "Let a developer know about Nuclia",
-	"quickstart.task7.title": "Spread the word",
 	"quickstart.title": "Quick start",
 	"recover.description": "Lost your password? Let’s fix that. Just enter the email address you registered with, and we’ll start the recovery procedure.",
 	"recover.gologin": "Go to the login page",
@@ -459,7 +447,6 @@
 	"resource.non_editable_data": "Non-editable data",
 	"resource.ocr.title": "OCR",
 	"resource.other_data": "Other data from the resource",
-	"resource.page.upload_image": "Upload a main image for the resource",
 	"resource.paragraph.help": "Search",
 	"resource.paragraph.search": "Paragraph search",
 	"resource.password": "Password",
@@ -538,7 +525,7 @@
 	"stash.create.language.mono-help": "Choose the language of the documentation in this knowledge box",
 	"stash.create.language.multi": "Multilingual",
 	"stash.create.languages": "Languages",
-	"stash.create.languages-help": "Select if information that will be uploaded to the KB will be in one or more languages. If there’s only one language, select that for improved accuracy.",
+	"stash.create.languages-help": "Select if information you will upload to the KB is in one or more languages. If there’s only one language, select it for better accuracy.",
 	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this knowledge box (defaults to the account’s zone)",
 	"stash.create_service_access": "Create new Service Access",
 	"stash.delete.delete": "Delete knowledge box?",
@@ -695,10 +682,8 @@
 	"upload.error": "Unknown error",
 	"upload.invalid_image": "Selected file is not a valid image",
 	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, it will show up in search results.",
-	"upload.progress.complete": "Upload complete",
 	"upload.progress.conflicts": "Conflicts",
 	"upload.progress.failed": "Failed",
-	"upload.progress.uploaded": "Uploaded",
 	"upload.select_file": "Drop your file(s) or click here",
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
 	"upload.size_warning_2": "Files exceeding this size will not be uploaded",
