Upload actions are now in resource list page
  - Remove upload actions from the dock
  - Add upload button and dropdown in resource list page header
  - Clean up  translations accordingly

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -594,7 +594,10 @@
 	"upload.completed": "completat",
 	"upload.duplicated": "Fitxer duplicat",
 	"upload.error": "Error desconegut",
+	"upload.files": "Carregueu fitxers",
+	"upload.folder": "Carregueu una carpeta",
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
+	"upload.link": "Afegeix un enllaç",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
