--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -680,7 +680,10 @@
 	"upload.completed": "completed",
 	"upload.duplicated": "Duplicated file",
 	"upload.error": "Unknown error",
+	"upload.files": "Upload files",
+	"upload.folder": "Upload a folder",
 	"upload.invalid_image": "Selected file is not a valid image",
+	"upload.link": "Add a link",
 	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, it will show up in search results.",
 	"upload.progress.conflicts": "Conflicts",
 	"upload.progress.failed": "Failed",
