--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -594,7 +594,10 @@
 	"upload.completed": "completado",
 	"upload.duplicated": "Fichero duplicado",
 	"upload.error": "Error desconocido",
+	"upload.files": "Subir archivos",
+	"upload.folder": "Subir una carpeta",
 	"upload.invalid_image": "El archivo seleccionad no es una imagen válida",
+	"upload.link": "Agregar un enlace",
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
