--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -160,7 +160,7 @@
 	"entity.form.color_placeholder": "Hexadecimal color (#ffdd1a)",
 	"entity.form.entities_help": "List of entities separated by comma",
 	"entity.form.title": "Entity group title",
-	"entity.name_entities_management": "Name entities management",
+	"entity.name_entities_management": "Named entities management",
 	"entity.new_entity": "Create a new entity",
 	"entity.save_changes": "Save changes",
 	"entity.search_synonym": "Search and select the synonym",
@@ -168,7 +168,6 @@
 	"entity.unlink_entity": "Unlink entity. A new unrelated entity will be created",
 	"farewell.message": "<p>We are sad to see you go, {{username}}!</p>\n<p>We will make sure we remove your account and data from Nuclia. On behalf of Nuclia’s team, we thank you for the time you invested in our platform.</p>\n<p>If you think we could have done something better, please <a href=\"mailto:{{email}}\">let us know</a>. We would love to hear from you.</p>\n<p>Thank you!</p>",
 	"farewell.title": "See you soon 👋",
-	"filter.filter_by_name_entities": "Filter by Name Entities",
 	"filter.filters_applied": "Filters applied",
 	"filter.search_ontology": "Search ontology ",
 	"filter.suggested_classification": "Suggested classification",
@@ -595,6 +594,8 @@
 	"stash.settings.processes.classifier.info": "In order to get accurate label search suggestions, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
 	"stash.settings.processes.labeler": " Automatic label training",
 	"stash.settings.processes.labeler.info": "In order to label sentences automatically, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
+	"stash.settings.processes.ner": "Named Entities Recognition training",
+	"stash.settings.processes.ner.info": "In order to recognize your custom entities automatically, existing content has to be annotated with your custom entities. As more content is annotated, training will improve. You can create new cutom entities from the Insights page.",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the charges incurred by selecting this option",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
