Clean resource translations
  - remove unused translations
  - add missing spanish and catalan translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -351,26 +351,18 @@
 	"reset.password": "Nova contrasenya",
 	"reset.password_reset": "S'ha restaurat la contrasenya",
 	"reset.title": "Crear contrasenya",
-	"resource.access_source_file": "Accedir al document d'origen",
 	"resource.add_labels": "Afegeix etiquetes",
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.authorship": "Autoria",
-	"resource.back_to_results": "Tornar als resultats",
 	"resource.classification": "Classificació",
-	"resource.close_preview": "Tancar previsualització",
 	"resource.created": "Data creació",
-	"resource.created_text": "Text creat",
-	"resource.creation_date": "Data de creació del recurs",
-	"resource.default_data": "Dades per defecte",
 	"resource.delete_resource_confirm": "Vols suprimir el document?",
 	"resource.delete_resource_warning": "Si elimines aquest document també s’esborrarà tota la informació processada.",
 	"resource.delete_resources_confirm": "Vols suprimir documents?",
 	"resource.delete_resources_warning": "Si elimines aquests documents també s’esborrarà tota la informació processada.",
-	"resource.description": "Descripció",
 	"resource.description.title": "Descripció",
 	"resource.edit": "Editar recurs",
-	"resource.edit_selected_resources": "Edició del recurs o recursos seleccionats",
 	"resource.entities.date": "Dates",
 	"resource.entities.event": "Esdeveniments",
 	"resource.entities.fac": "Construccions",
@@ -389,34 +381,9 @@
 	"resource.entities.time": "Temps",
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
-	"resource.file.creator": "Creador",
-	"resource.file.metadata.title": "Metadades del recurs",
-	"resource.file_creation_date": "Data de creació del fitxer",
-	"resource.hidehighlight": "Elimina el ressaltat",
-	"resource.inception.title": "Elements trobats",
-	"resource.language": "Idioma",
-	"resource.name_entities": "Informació clau",
-	"resource.non_editable_data": "Dades no editables",
-	"resource.ocr.title": "OCR",
-	"resource.other_data": "Altres dades del recurs",
-	"resource.paragraph.help": "Cerca",
-	"resource.paragraph.search": "Cerca per paràgraf",
-	"resource.password": "Contrasenya",
-	"resource.pdf.help": "Cerca",
-	"resource.reference_image": "Imatge de referència",
-	"resource.resource_edit": "Edició del recurs",
+	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} per pàgina",
-	"resource.search_one": "Cerca'n un/a",
-	"resource.section.materials.files": "Documents",
-	"resource.section.materials.links": "Enllaços",
-	"resource.section.materials.no_files": "No hi ha documents",
-	"resource.section.materials.no_links": "No hi ha enllaços",
-	"resource.section.materials.no_related": "No hi ha articles relacionats",
-	"resource.section.materials.related": "Articles",
-	"resource.section.materials.title": "Continguts relacionats",
 	"resource.selected_count": "{{num}} arxius seleccionats",
-	"resource.showHightligh": "Ressaltar entitats",
-	"resource.source_file": "Document d'origen",
 	"resource.status": "Estat",
 	"resource.status_error": "Error en processar",
 	"resource.status_loading": "S'està carregant l'estat...",
@@ -426,16 +393,10 @@
 	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
 	"resource.summary": "Resum",
 	"resource.text": "Text",
-	"resource.textplaceholder": "Escriu aquí ",
+	"resource.thumbnail": "Miniatura",
 	"resource.thumbnail.drop": "Deixeu la imatge o feu clic aquí",
+	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
 	"resource.title": "Títol del recurs",
-	"resource.title_id": "Títol / ID",
-	"resource.total": "Total",
-	"resource.transcript.from": "Des de",
-	"resource.transcript.title": "Transcripció de l'àudio ",
-	"resource.transcript.to": "a",
-	"resource.type": "Tipus",
-	"resource.updated": "Data actualització",
 	"resource.visible_columns_dropdown": "Es mostren les columnes",
 	"search.more_results": "mostrar més resultats",
 	"search.sort_by": "Ordenar per",
@@ -521,10 +482,7 @@
 	"stash.side.audit": "Auditoria",
 	"stash.side.create": "Creació de contingut",
 	"stash.side.entities": "Conceptes clau",
-	"stash.side.file": "Pujar fitxer",
-	"stash.side.folder": "Pujar carpeta",
 	"stash.side.import": "Importa fitxers",
-	"stash.side.link": "Pujar enllaç",
 	"stash.side.list": "Llistat recursos",
 	"stash.side.manage": "Gestiona recursos",
 	"stash.side.page": "Afegir pàgina",
