--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -351,26 +351,18 @@
 	"reset.password": "Nueva contraseña",
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Crea contraseña",
-	"resource.access_source_file": "Acceder al documento de origen",
 	"resource.add_labels": "Agregar etiquetas",
 	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
 	"resource.authorship": "Autoría",
-	"resource.back_to_results": "Volver a los resultados",
 	"resource.classification": "Clasificación",
-	"resource.close_preview": "Cerrar previsualización",
 	"resource.created": "Data de creación",
-	"resource.created_text": "Texto creado",
-	"resource.creation_date": "Fecha de creación del recurso",
-	"resource.default_data": "Datos por defecto",
 	"resource.delete_resource_confirm": "¿Eliminar documento?",
 	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
 	"resource.delete_resources_confirm": "¿Eliminar documentos?",
 	"resource.delete_resources_warning": "Si eliminas estos documentos también se borrará toda la información procesada.",
-	"resource.description": "Descripción",
 	"resource.description.title": "Descripción",
 	"resource.edit": "Editar recurso",
-	"resource.edit_selected_resources": "Edición del recurso o recursos seleccionados",
 	"resource.entities.date": "Fechas",
 	"resource.entities.event": "Eventos",
 	"resource.entities.fac": "Construcciones",
@@ -389,34 +381,9 @@
 	"resource.entities.time": "Tiempo",
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
-	"resource.file.creator": "Creador",
-	"resource.file.metadata.title": "Metadatos del recurso",
-	"resource.file_creation_date": "Data de creación del archivo",
-	"resource.hidehighlight": "Elimina el resaltado",
-	"resource.inception.title": "Elementos encontrados",
-	"resource.language": "Idioma",
-	"resource.name_entities": "Palabras clave",
-	"resource.non_editable_data": "Datos no editables",
-	"resource.ocr.title": "OCR",
-	"resource.other_data": "Otros datos del recurso",
-	"resource.paragraph.help": "Busca",
-	"resource.paragraph.search": "Busca en párrafo",
-	"resource.password": "Contraseña",
-	"resource.pdf.help": "Busca",
-	"resource.reference_image": "Imagen de referencia",
-	"resource.resource_edit": "Edición del recurso",
+	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} por página",
-	"resource.search_one": "Busca uno/a",
-	"resource.section.materials.files": "Documents",
-	"resource.section.materials.links": "Enlaces",
-	"resource.section.materials.no_files": "No hay documentos",
-	"resource.section.materials.no_links": "No hay enlaces",
-	"resource.section.materials.no_related": "No hay artículos relacionados",
-	"resource.section.materials.related": "Artículos",
-	"resource.section.materials.title": "Contenidos relacionados",
 	"resource.selected_count": "{{num}} ficheros seleccionados",
-	"resource.showHightligh": "Resaltar entidades",
-	"resource.source_file": "Documento de origen",
 	"resource.status": "Estado",
 	"resource.status_error": "Error al procesar",
 	"resource.status_loading": "Cargando estado…",
@@ -426,16 +393,10 @@
 	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
 	"resource.summary": "Resumen",
 	"resource.text": "Texto",
-	"resource.textplaceholder": "Escribe aquí",
+	"resource.thumbnail": "Miniatura",
 	"resource.thumbnail.drop": "Suelte la imagen o haga clic aquí",
+	"resource.thumbnail.help": "Sube una imagen o elige de las sugerencias",
 	"resource.title": "Título del recurso",
-	"resource.title_id": "Título / ID",
-	"resource.total": "Total",
-	"resource.transcript.from": "Desde",
-	"resource.transcript.title": "Transcripción del audio",
-	"resource.transcript.to": "a",
-	"resource.type": "Tipo",
-	"resource.updated": "Fecha de actualización",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
 	"search.more_results": "mostrar más resultados",
 	"search.sort_by": "Ordenar por",
@@ -521,10 +482,7 @@
 	"stash.side.audit": "Auditoría",
 	"stash.side.create": "Creación de contenido",
 	"stash.side.entities": "Conceptos clave",
-	"stash.side.file": "Subir fichero",
-	"stash.side.folder": "Subir carpeta",
 	"stash.side.import": "Importa ficheros",
-	"stash.side.link": "Subir enlace",
 	"stash.side.list": "Listado de recursos",
 	"stash.side.manage": "Gestiona recursos",
 	"stash.side.page": "Añadir página",
