[sc-3200] Add NER training in training page (#423)
* [sc-3200] Add NER training in training page

* Check feature flag

* Add texts

* Fix typo

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -132,7 +132,6 @@
 	"entity.unlink_entity": "Desenllaçar l'entitat. Es crearà una nova entitat no relacionada",
 	"farewell.message": "<p>Ens sap greu que te'n vagis {{username}}!</p>\n<p>Ens assegurarem d'eliminar el teu usuari i dades de Nuclia. En nom de l'equip de Nuclia et volem agrair el temps que has dedicat a la nostra plataforma.</p>\n<p>Si creus que podriem haver fet alguna cosa millor, sisplau <a href=\"mailto:{{email}}\">fes-nos-ho saber</a>. Ens encantaria saber-ho.</p>\n<p>Gràcies!</p>",
 	"farewell.title": "Fins aviat 👋",
-	"filter.filter_by_name_entities": "Filtrar per Name Entities",
 	"filter.filters_applied": "Filtres aplicats",
 	"filter.search_ontology": "Cerca l'Ontologia",
 	"filter.suggested_classification": "Classificació suggerida",
@@ -513,9 +512,10 @@
 	"stash.service_access_description": "Important! Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"stash.settings": "Preferències de la caixa de coneixament",
 	"stash.settings.processes.training.agreement": "Accepto els càrrecs incorreguts en seleccionar aquesta opció",
-	"stash.settings.processes.training.all_labelsets": "Totes les etiquetes",
 	"stash.settings.processes.training.last_run": "Última execució: {{ runDate }}",
+	"stash.settings.processes.training.select-entities": "Triar grups d'entitats",
 	"stash.settings.processes.training.select-labelsets": "Tria les etiquetes",
+	"stash.settings.processes.training.select_all": "Seleccionar tot",
 	"stash.settings.processes.training.time_requirement": "El temps necessari per entrenar és d'unes {{hours}} hores que es restaran de les hores disponibles.",
 	"stash.side.activity": "Registre d'activitat",
 	"stash.side.audit": "Auditoria",
