--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -132,7 +132,6 @@
 	"entity.unlink_entity": "Desenlazar la entidad. Se creará una nueva entidad no relacionada",
 	"farewell.message": "<p>Nos entristece que te vayas {{username}}!</p>\n<p>Nos aseguraremos de eliminar tu usuario y datos de Nuclia. En nombre del equipo de Nuclia te queremos agradecer el tiempo que has dedicado a nuestra plataforma.</p>\n<p>Si crees que podríamos haber echo alguna cosa mejor, por favor <a href=\"mailto:{{email}}\">háznoslo saber</a>. Nos encantaría saberlo.</p>\n<p>Gracias!</p>",
 	"farewell.title": "Hasta pronto 👋",
-	"filter.filter_by_name_entities": "Filtrar por Name Entities",
 	"filter.filters_applied": "Filtros aplicados",
 	"filter.search_ontology": "Busca la Ontología",
 	"filter.suggested_classification": "Clasificación sugerida",
@@ -513,9 +512,10 @@
 	"stash.service_access_description": "¡Importante! Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
 	"stash.settings": "Preferencias de la caja de conocimiento",
 	"stash.settings.processes.training.agreement": "Acepto los cargos incurridos al seleccionar esta opción",
-	"stash.settings.processes.training.all_labelsets": "Todas las etiquetas",
 	"stash.settings.processes.training.last_run": "Última ejecución: {{ runDate }}",
+	"stash.settings.processes.training.select-entities": "Escoger grupo de entidades",
 	"stash.settings.processes.training.select-labelsets": "Escoge las etiquetas",
+	"stash.settings.processes.training.select_all": "Seleccionar todo",
 	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
 	"stash.side.activity": "Registro de actividad",
 	"stash.side.audit": "Auditoría",
