[sc-3208] New search page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -446,7 +446,6 @@
 	"search.title.semanticresults": "Resultat semàntic",
 	"search.type_of_document": "Tipus de document",
 	"search.type_of_results": "Tipus de resultats",
-	"searchbar.help": "Cerca ",
 	"setup.account_name_not_available": "Aquest nom de compte no està disponible. Prova'n un altre.",
 	"setup.account_preferences": "1. Comencem amb les preferències del teu compte",
 	"setup.account_validated": "El teu compte ha estat validat",
@@ -502,6 +501,7 @@
 	"stash.publish.warning": "Si publiques la Caixa de Coneixement \"{{ kb }}\" faràs pública tota la informació que conté.",
 	"stash.retire.retire": "Fer privada la Caixa de Coneixment ",
 	"stash.retire.warning": "Si despubliques la Caixa de Coneixement \"{{ kb }}\" fas privada tota la informació que conté.",
+	"stash.search": "Cerca ",
 	"stash.search_users": "Afegir un nou usuari",
 	"stash.search_users_add": "Vols afegir aquest nou usuari al compte?",
 	"stash.search_users_description": "Afegeix el correu electrònic del nou usuari",
