--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -510,7 +510,6 @@
 	"search.title.semanticresults": "Semantic result",
 	"search.type_of_document": "Type of document",
 	"search.type_of_results": "Type of results",
-	"searchbar.help": "Search",
 	"setup.account_name_not_available": "Account name already exists.",
 	"setup.account_preferences": "1. Let’s start with your account preferences",
 	"setup.account_validated": "Your account was validated",
@@ -580,6 +579,7 @@
 	"stash.retire.error": "Error when unpublishing the Knowledge Box",
 	"stash.retire.retire": "Make the Knowledge Box private",
 	"stash.retire.warning": "If you unpublish the \"{{ kb }}\" Knowledge Box, all the information in it will become private.",
+	"stash.search": "Search",
 	"stash.search_users": "Add a new user",
 	"stash.search_users_add": "Do you really want to add this user to the account? ",
 	"stash.search_users_description": "Add new user’s email",
