--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -446,7 +446,6 @@
 	"search.title.semanticresults": "Resultado semántico",
 	"search.type_of_document": "Tipo de documento",
 	"search.type_of_results": "Tipo de resultados",
-	"searchbar.help": "Busca",
 	"setup.account_name_not_available": "Este nombre de cuenta no está disponible. Prueba con otro.",
 	"setup.account_preferences": "1. Empezamos con las preferencias de tu cuenta",
 	"setup.account_validated": "Tu cuenta ha sido validada",
@@ -502,6 +501,7 @@
 	"stash.publish.warning": "Si publicas la Caja de Conocimiento \"{{ kb }}\" toda la información que contiene se hará pública.",
 	"stash.retire.retire": "Hacer privada la Caja de Conocimiento",
 	"stash.retire.warning": "Si despublicas la Caja de Conocimiento \"{{ kb }}\", toda la información que contiene será privada. ",
+	"stash.search": "Busca",
 	"stash.search_users": "Añadir un nuevo usuario",
 	"stash.search_users_add": "¿Quieres añadir el usuario a la cuenta?",
 	"stash.search_users_description": "Añade el correo electrónico del nuevo usuario",
