--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -431,6 +431,8 @@
 	"resource.link": "Link",
 	"resource.profile": "Profile",
 	"resource.resource_page_number": "{{num}} per page",
+	"resource.search.in-resource": "in resource",
+	"resource.search.in-title": "in title",
 	"resource.selected_count": "{{num}} files selected",
 	"resource.status": "Status",
 	"resource.status_error": "Error while processing",
